# marcos_client

./: .gitignore  README.md  examples.py  grad_board_incoming.py  local_config.toml  pyproject.toml
marcos/: __init__.py  __main__.py  cli.py  experiment.py  grad_board.py  grad_board_mine.py  local_config.py  marcompile.py  marcostek.py  marmachine.py  plot_csv.py  server_comms.py
marcos/tests/: test_base.py  test_gpa_fhdo.py  test_long_sequence.py  test_loopback.py  test_marga.py  test_marga_model.py  test_noise.py  test_server.py
marcos_client/: __init__.py  __main__.py  cli.py  examples.py  experiment.py  grad_board.py  local_config.py  local_config.toml.example  marcompile.py  marcostek.py  marmachine.py  plot_csv.py  server_comms.py  test_base.py  test_gpa_fhdo.py  test_long_sequence.py  test_loopback.py  test_marga.py  test_marga_model.py  test_noise.py  test_server.py
marcos_client/tests/: test_base.py  test_gpa_fhdo.py  test_long_sequence.py  test_loopback.py  test_marga.py  test_marga_model.py  test_noise.py  test_server.py
