[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marcos"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Vlad Negnevitsky", email = "vee neg nev at gee mail dot com" },
  { name = "Max Stabel", email = "M4a1x@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "matplotlib",
  "msgpack",
  "tomli; python_version < '3.11'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/vnegnev/marcos_client#readme"
Issues = "https://github.com/vnegnev/marcos_client/issues"
Source = "https://github.com/vnegnev/marcos_client"

[tool.hatch.version]
path = "marcos_client/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "ruff",
  "black",
  "mypy",
  "pylint",
  "coverage[toml]",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=marcos_client --cov=tests {args}"
no-cov = "cov --no-cov {args}"
check = [
  "black --check --diff {args:.}",
  "ruff {args:.}",
  "pylint {args:marcos_client tests}",
]
fmt = ["black {args:.}", "ruff --fix {args:.}"]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["marcos_client/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
