[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marcos"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Vlad Negnevitsky", email = "vnegnev@users.noreply.github.com" },
  { name = "Max Stabel", email = "M4a1x@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "matplotlib",
  "msgpack",
  "platformdirs",
  "tomli; python_version < '3.11'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/vnegnev/marcos_client#readme"
Issues = "https://github.com/vnegnev/marcos_client/issues"
Source = "https://github.com/vnegnev/marcos_client"

[project.scripts]
marcos = "marcos.cli:main"

[tool.hatch.version]
path = "marcos/__about__.py"

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
  "ruff",
  "black",
  "mypy",
  "pylint",
  "coverage[toml]",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=marcos --cov=tests {args}"
no-cov = "cov --no-cov {args}"
check = [
  "black --check --diff {args:.}",
  "ruff {args:.}",
  "pylint {args:marcos tests}",
]
fmt = ["black {args:.}", "ruff --fix {args:.}"]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["sequences"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["marcos/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
